[gd_scene load_steps=5 format=3 uid="uid://bqmmatkoh6y4v"]

[ext_resource type="Script" path="res://src/creatures/pill_bug.gd" id="1_kbjn7"]
[ext_resource type="Texture2D" uid="uid://8iufllcujsko" path="res://icon.svg" id="2_vqs1y"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_422cx"]
size = Vector2(128, 128)

[sub_resource type="CircleShape2D" id="CircleShape2D_22vbp"]
radius = 61.2944

[node name="PillBug" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 17
script = ExtResource("1_kbjn7")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_422cx")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_vqs1y")

[node name="WallBox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 21

[node name="CollisionShapeLeft" type="CollisionShape2D" parent="WallBox"]
position = Vector2(64, 0)
shape = SubResource("CircleShape2D_22vbp")

[node name="CollisionShapeRight" type="CollisionShape2D" parent="WallBox"]
position = Vector2(-64, 0)
shape = SubResource("CircleShape2D_22vbp")

[connection signal="body_exited" from="WallBox" to="." method="_on_wall_box_body_exited"]
